# markdown-vault

./: .gitignore  AGENTS.md  Makefile  README.md  meson.build
data/: de.hannemann.markdown-vault.desktop  de.hannemann.markdown-vault.gresource.xml  de.hannemann.markdown-vault.metainfo.xml  de.hannemann.markdown-vault.yml  markdown-vault  meson.build
data/css/: gtk.css  meson.build  style.css
data/icons/: meson.build
packaging/apparmor/: markdown-vault
scripts/: test-app.sh
src/: __main__.py  app_window.py  backlink_index.py  config.py  editor.py  git_integration.py  latex_mathml.py  main.py  markdown_help.py  meson.build  mru.py  preferences.py  preview.py  search.py  search_logic.py  session.py  sidebar.py  tabs.py  tags.py  vault_monitor.py  vault_tree.py
src/share/markdown-vault/css/: style.css
tests/: test_backlink_index.py  test_config.py  test_dirty_close.py  test_editor.py  test_file_index.py  test_latex_mathml.py  test_mru.py  test_preview.py  test_save_dialog_response.py  test_search.py  test_sidebar.py  test_tabs.py  test_tags.py  test_validation.py
