i18n = import('i18n')

install_data(
  'de.hannemann.markdown-vault.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'de.hannemann.markdown-vault.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'markdown-vault',
  install_dir: get_option('bindir'),
)

subdir('icons')
subdir('css')
